--- a/src/main/resources/templates/list-employee.html
+++ b/src/main/resources/templates/list-employee.html
@@ -13,10 +13,16 @@
             <div style="text-align: center">
                 <h2>List employee</h2>
             </div>
-            <div>
+            <div style="margin: 10px 0">
                 <form action="/" method="get">
-                    <input type="text" name="name">
-                    <button>Search</button>
+                    <div style="display: flex">
+                        <div class="form-group">
+                            <input type="text" name="name" class="form-control" placeholder="Enter name employee to find">
+                        </div>
+                        <div>
+                            <button class="btn">Search</button>
+                        </div>
+                    </div>
                 </form>
             </div>
             <div>
